# hatch-demo

./: Dockerfile  LICENSE.txt  README.md  pyproject.toml
src/hatch_demo/: __about__.py  demo.py  main.py
tests/: __init__.py  test_simple.py
