[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatch-demo"
dynamic = ["version"]
description = 'Playing around with Hatch to try and set up an idealized python project.'
readme = "README.md"
requires-python = ">=3.12.7"
license = "MIT"
keywords = []
authors = [
  { name = "Rogan Creswick", email = "creswick@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  # Sample dependency, just for demonstration.
  "numpy==2.1.3"
]

[project.urls]
Documentation = "https://github.com/creswick/hatch-demo#readme"
Issues = "https://github.com/creswick/hatch-demo/issues"
Source = "https://github.com/creswick/hatch-demo"

[tool.hatch.version]
path = "src/hatch_demo/__about__.py"


# See https://hatch.pypa.io/latest/plugins/builder/wheel for details
# on configuring the build distribution.
#
# This can be configured, but if not needed, it can be left out.  The
# default configuration requires that src/hatch-demo/__init__.py
# exists.
#
# [tool.hatch.build.targets.wheel]

# Main entry point.
#
# Note that there is no easy way to invoke this with hatch, see:
# https://github.com/pypa/hatch/issues/1632
#
# To work around this, we define an environment script that does the
# same thing below.
[project.scripts]
hatch-demo = "hatch_demo.main:run"

# Duplication of the main entry point, see the github issue mentioned
# above the [project.scripts] section.
[tool.hatch.envs.main]
hatch-demo = "python -m hatch_demo.main:run"

[tool.hatch.envs.docker.scripts]
build-image = "docker buildx build -f Dockerfile -t hatch-demo ."
run-image = "docker run hatch-demo"

[tool.hatch.envs.lint]
extra-dependencies = [
  "mypy>=1.0.0",
  "pytest>=8.3.3",
  "black>=23.1.0",
  "ruff>=0.0.243",
]

[tool.hatch.envs.lint.scripts]
typecheck = "mypy --install-types --non-interactive {args:src/hatch_demo tests}"

style = [
  "ruff check {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:./src/hatch_demo tests}",
  "ruff --fix {args:./src/hatch_demo tests}",
  "style",
]
all = [
  "style",
  "typecheck",
]

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.ruff]
line-length = 120
lint.select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
lint.unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["autogradinglean"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.hatch.envs.hatch-test]
default-args = ["tests"]

[tool.coverage.run]
source_pkgs = ["hatch_demo", "tests"]
branch = true
parallel = true
omit = [
  "src/hatch_demo/__about__.py",
]

[tool.coverage.paths]
hatch_demo = ["src/hatch_demo", "*/hatch-demo/src/hatch_demo"]
tests = ["tests", "*/hatch-demo/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
